Replace all references to PSS with either MM or MemoryMosaic

--- a/MemoryMosaic/Pages/AllItems.razor
+++ b/MemoryMosaic/Pages/AllItems.razor
@@ -1,6 +1,6 @@
 ﻿@page "/all-items"
 
-<title>All Items - PSS</title>
+<title>All Items - MemoryMosaic</title>
 <link href="css/IndexStarredNoDT.css" rel="stylesheet"/>
 
 @{
