--- a/MemoryMosaic/Pages/CollectionView.razor
+++ b/MemoryMosaic/Pages/CollectionView.razor
@@ -3,7 +3,7 @@
 
 @if (collection == null) { return; }
 
-<title>@collection.name - PSS</title>
+<title>@collection.name - MemoryMosaic</title>
 <link href="css/CollectionView.css" rel="stylesheet">
 
 @{
