--- a/MemoryMosaic/Pages/CollectionsMain.razor
+++ b/MemoryMosaic/Pages/CollectionsMain.razor
@@ -1,7 +1,7 @@
 @* Show all collections and allow user to sort them and make new ones *@
 @page "/collections"
 
-<title>Collections - PSS</title>
+<title>Collections - MemoryMosaic</title>
 <link href="css/CollectionsMain.css" rel="stylesheet">
 
 <header>
