--- a/MemoryMosaic/Pages/Index.razor
+++ b/MemoryMosaic/Pages/Index.razor
@@ -1,6 +1,6 @@
 @page "/"
 
-<title>Home - PSS</title>
+<title>Home - MemoryMosaic</title>
 <link href="css/IndexStarredNoDT.css" rel="stylesheet"/>
 
 @{
