--- a/MemoryMosaic/Pages/Maintenance/MissingFiles.razor
+++ b/MemoryMosaic/Pages/Maintenance/MissingFiles.razor
@@ -1,6 +1,6 @@
 @page "/maintenance/missing-files"
 
-<title>Missing Files — Maintenance - PSS</title>
+<title>Missing Files — Maintenance - MM</title>
 <link href="css/maintenance/MissingFiles.css" rel="stylesheet">
 
 <header>
