--- a/MemoryMosaic/Pages/No Date Taken.razor
+++ b/MemoryMosaic/Pages/No Date Taken.razor
@@ -1,6 +1,6 @@
 @page "/no-dt"
 
-<title>No Date Taken - PSS</title>
+<title>No Date Taken - MM</title>
 <link href="css/IndexStarredNoDT.css" rel="stylesheet"/>
 
 @{
