--- a/MemoryMosaic/Pages/Search.razor
+++ b/MemoryMosaic/Pages/Search.razor
@@ -1,6 +1,6 @@
 ﻿@page "/search"
 
-<title>Search - PSS</title>
+<title>Search - MM</title>
 <link href="css/IndexStarredNoDT.css" rel="stylesheet"/>
 <link href="css/Search.css" rel="stylesheet"/>
 
