--- a/MemoryMosaic/Pages/Starred.razor
+++ b/MemoryMosaic/Pages/Starred.razor
@@ -1,6 +1,6 @@
 @page "/starred"
 
-<title>Starred - PSS</title>
+<title>Starred - MemoryMosaic</title>
 <link href="css/IndexStarredNoDT.css" rel="stylesheet"/>
 
 @{
