--- a/MemoryMosaic/Pages/Test.razor
+++ b/MemoryMosaic/Pages/Test.razor
@@ -1,7 +1,7 @@
 @*A blank page just for testing stuff*@
 @page "/test"
 
-<title>Test - PSS</title>
+<title>Test - MM</title>
 @{
     <button style="margin-left: 50%; margin-top: 10%; color: black;" @onclick="@(Yes)">click me</button>
 }
