--- a/MemoryMosaic/Pages/Trash.razor
+++ b/MemoryMosaic/Pages/Trash.razor
@@ -1,7 +1,7 @@
 ﻿@page "/trash"
 @inject IJSRuntime JSRuntime
 
-<title>Trash - PSS</title>
+<title>Trash - MemoryMosaic</title>
 <link href="css/Trash.css" rel="stylesheet"/>
 
 @{
