--- a/MemoryMosaic/Shared/LibraryItem.razor
+++ b/MemoryMosaic/Shared/LibraryItem.razor
@@ -3,7 +3,7 @@
 
 <div class="libraryItem">
 	<span class="material-icons-outlined checkbox unchecked">check_circle</span>
-	<img src="data:image/jpg;base64,@MediaRow.thumbnail" onclick="window.open('pss_library/@MediaRow.path', '_blank').focus();" alt="" loading="lazy"/>
+	<img src="data:image/jpg;base64,@MediaRow.thumbnail" onclick="window.open('mm_library/@MediaRow.path', '_blank').focus();" alt="" loading="lazy"/>
 	<span class="shortPath @(Import.pathWidthClass == "shortWidth" ? "shortWidth" : "fullWidth")">@("Library/" + MediaRow.path)</span>
 	<span class="dateTaken">@(MediaRow.dateTaken == null ? "No Date Taken" : MediaRow.dateTaken)</span>
 	<span class="inTrash">@(MediaRow.dateDeleted != null ? "In Trash" : "")</span>
