--- a/MemoryMosaic/App.razor
+++ b/MemoryMosaic/App.razor
@@ -4,7 +4,7 @@
     </Found>
     <NotFound>
         <LayoutView Layout="@typeof(MainLayout)">
-            <title>404 - PSS</title>
+            <title>404 - MemoryMosaic</title>
             <Error/>
         </LayoutView>
     </NotFound>
