--- a/MemoryMosaic/Pages/Import.razor
+++ b/MemoryMosaic/Pages/Import.razor
@@ -3,7 +3,7 @@
 @using System.Text
 @inject IJSRuntime JSRuntime
 
-<title>Import - PSS</title>
+<title>Import - MemoryMosaic</title>
 <link href="css/Import.css" rel="stylesheet">
 
 @{
@@ -12,7 +12,7 @@
 	
 	if (allAbsPaths is null || allAbsPaths.Count is 0)
 	{
-		<h1>No supported files found in pss_import.</h1>
+		<h1>No supported files found in mm_import.</h1>
 		return;
 	}
 
@@ -171,10 +171,10 @@
 	///Show a warning if any items have a DT year less than or greater than these values.
 	public static int minYear, maxYear;
 
-	///Stores the absolute path of every supported file in pss_import.
+	///Stores the absolute path of every supported file in mm_import.
 	private static List<string> allAbsPaths;
 
-	///List of data about each supported file in pss_import.
+	///List of data about each supported file in mm_import.
 	public static List<ImportFile> importFiles;
 
 	private static readonly LazyDictionary<string, List<MediaRow>> libFilesWithSameName = new(), libFilesWithSimilarName = new();
