--- a/MemoryMosaic/Pages/Memories.razor
+++ b/MemoryMosaic/Pages/Memories.razor
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="css/components/ViewItem.css">
 <link rel="stylesheet" href="css/Memories.css">
 
-<title>Memories - PSS</title>
+<title>Memories - MM</title>
 
 <header>
     <span>Memories From</span>
