--- a/MemoryMosaic/Pages/Settings.razor
+++ b/MemoryMosaic/Pages/Settings.razor
@@ -1,6 +1,6 @@
 @page "/settings"
 
-<title>Settings - PSS</title>
+<title>Settings - MM</title>
 <link href="css/Settings.css" rel="stylesheet"/>
 
 <div id="body">
@@ -67,10 +67,10 @@
 
     <div>
         <span class="header">Maintenance</span>
-        <button class="textBtn" title="Create and Restore Backups of PSS"><span class="material-icons-outlined">restore</span><a href="maintenance/backups">Backups</a></button>
+        <button class="textBtn" title="Create and Restore Backups of MM"><span class="material-icons-outlined">restore</span><a href="maintenance/backups">Backups</a></button>
         <button class="textBtn" @onclick="@(() => System.Diagnostics.Process.Start("shutdown.exe", "-r -t 0"))"><span class="material-icons-outlined">restart_alt</span><span>Restart Server</span></button>
-        <button class="textBtn" @onclick="@(() => { Directory.Delete(S.tmpFolderPath, true); Directory.CreateDirectory(S.tmpFolderPath); })"><span class="material-icons-outlined">folder_delete</span><span>Clear pss_tmp</span></button>
-        <button title="Clear pss_tmp and Empty Trash" class="textBtn" @onclick="@FreeUpSpace"><span class="material-icons-outlined">folder_delete</span><span>Free Up Space</span></button>
+        <button class="textBtn" @onclick="@(() => { Directory.Delete(S.tmpFolderPath, true); Directory.CreateDirectory(S.tmpFolderPath); })"><span class="material-icons-outlined">folder_delete</span><span>Clear mm_tmp</span></button>
+        <button title="Clear mm_tmp and Empty Trash" class="textBtn" @onclick="@FreeUpSpace"><span class="material-icons-outlined">folder_delete</span><span>Free Up Space</span></button>
         @if (!maintenanceLoaded)
         {<button class="textBtn" @onclick="@RunMaintenanceCheck"><span class="material-icons-outlined">build</span><span>Run Maintenance Check</span></button>}
         @if (maintenanceLoaded)
@@ -143,7 +143,7 @@
     private static bool maintenanceLoaded;
     private static List<string> untrackedPaths;
 
-    //Get all folders in pss_library and pss_import
+    //Get all folders in mm_library and mm_import
     private static string[] folderPaths;
     private static readonly List<string> emptyFolders = new();
     
@@ -153,7 +153,7 @@
     //Stats
     private static bool statsLoaded;
     private static long mediaRowCount, trashRowCount, collectionsCount;
-    private static long totalUsableDriveSize; //How much space the drive pss_library is on could have. E.g., on a 1 TB drive it returns ~930 GB. The rest is probably reserved for the OS.
+    private static long totalUsableDriveSize; //How much space the drive mm_library is on could have. E.g., on a 1 TB drive it returns ~930 GB. The rest is probably reserved for the OS.
     private static long freeDriveSpace; //Bytes
     private static long librarySize; //Bytes
     private static MediaRow oldestDTItem, newestDTItem, oldestDAItem, newestDAItem;
@@ -190,7 +190,7 @@
     ///Free up space on server by removing temporary files, empty folders, and emptying the trash.
     private static void FreeUpSpace()
     {
-        //Clear pss_tmp.
+        //Clear mm_tmp.
         Directory.Delete(S.tmpFolderPath, true);
         Directory.CreateDirectory(S.tmpFolderPath);
         
