--- a/MemoryMosaic/Pages/_Host.cshtml
+++ b/MemoryMosaic/Pages/_Host.cshtml
@@ -9,8 +9,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link href="~/css/Shared.css" rel="stylesheet" />
-    <script src="PSS.js"></script>
-    <link rel="icon" href="PSS Icon.png">
+    <script src="MM.js"></script>
+    <link rel="icon" href="MM Icon.png">
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet"> @*https://stackoverflow.com/questions/50303454/how-to-use-the-new-material-design-icon-themes-outlined-rounded-two-tone-and*@
 </head>
 
