--- a/MemoryMosaic/Shared/ImportItem.razor
+++ b/MemoryMosaic/Shared/ImportItem.razor
@@ -6,7 +6,7 @@
 <div class="importItem" @onclick="@(mouseArgs => { if (mouseArgs.CtrlKey) CheckClicked(mouseArgs); })">
 	<button class="checkBtn" @onclick="@CheckClicked"><span class="material-icons-outlined checkbox @(Import.selectedItems.Contains(ImportFile.uuid) ? "checked" : "unchecked")">check_circle</span></button>
 	
-	<img src="data:image/jpg;base64,@ImportFile.thumbnail" onclick="window.open('pss_import/@ImportFile.shortPath', '_blank').focus();" alt="" loading="lazy"/>
+	<img src="data:image/jpg;base64,@ImportFile.thumbnail" onclick="window.open('mm_import/@ImportFile.shortPath', '_blank').focus();" alt="" loading="lazy"/>
 	<span class="shortPath @(Import.pathWidthClass == "shortWidth" ? "shortWidth" : "fullWidth")" onclick="openEdit(@Index)">Import/@ImportFile.shortPath</span>
 
 	<input type="text" @bind="@ImportFile.renamedFilename" style="display: none" id="text @Index">
