--- a/MemoryMosaic/Pages/LibraryContent/Search.razor
+++ b/MemoryMosaic/Pages/LibraryContent/Search.razor
@@ -1,7 +1,7 @@
 ﻿@page "/search"
 
 <title>Search - MM</title>
-<link href="css/IndexStarredNoDT.css" rel="stylesheet"/>
+<link href="css/LibraryContentPage.css" rel="stylesheet"/>
 <link href="css/Search.css" rel="stylesheet"/>
 
 @{
