--- a/MemoryMosaic/Pages/LibraryContent/AllItems.razor
+++ b/MemoryMosaic/Pages/LibraryContent/AllItems.razor
@@ -1,7 +1,7 @@
 ﻿@page "/all-items"
 
 <title>All Items - MemoryMosaic</title>
-<link href="css/IndexStarredNoDT.css" rel="stylesheet"/>
+<link href="css/LibraryContentPage.css" rel="stylesheet"/>
 
 @{
     <header style="visibility: @headerVis">
