--- a/MemoryMosaic/Pages/LibraryContent/Home.razor
+++ b/MemoryMosaic/Pages/LibraryContent/Home.razor
@@ -1,7 +1,7 @@
 @page "/"
 
 <title>Home - MemoryMosaic</title>
-<link href="css/IndexStarredNoDT.css" rel="stylesheet"/>
+<link href="css/LibraryContentPage.css" rel="stylesheet"/>
 
 @{
     <header style="visibility: @headerVis">
