--- a/MemoryMosaic/Pages/LibraryContent/Starred.razor
+++ b/MemoryMosaic/Pages/LibraryContent/Starred.razor
@@ -1,7 +1,7 @@
 @page "/starred"
 
 <title>Starred - MemoryMosaic</title>
-<link href="css/IndexStarredNoDT.css" rel="stylesheet"/>
+<link href="css/LibraryContentPage.css" rel="stylesheet"/>
 
 @{
     <header>
