Remove constants in Settings for the different request paths
Just not really needed. These things never change, they're kinda ugly when used in a path, and they're longer than their underlying values.

--- a/MemoryMosaic/Pages/CollectionsMain.razor
+++ b/MemoryMosaic/Pages/CollectionsMain.razor
@@ -49,7 +49,7 @@
     { 
         <a class="collection" href="/collection-view/@collection.id"> @*Text and collection thumbnail*@
             <div class="thumbnail">
-                @if (collection.cover != ""){<img src="@S.LIB_REQUEST_PATH/@collection.cover" alt=""/>}
+                @if (collection.cover != ""){<img src="mm_library/@collection.cover" alt=""/>}
             </div>
             <span class="collectionName">@collection.name</span>
         </a>
