--- a/MemoryMosaic/Pages/Settings.razor
+++ b/MemoryMosaic/Pages/Settings.razor
@@ -8,36 +8,36 @@
         <span class="header">Settings</span>
         <div class="settings-pair">
             <span>Server IP Address</span>
-            <input type="text" class="settings-pair" @bind="@serverIP"/>
+            <input type="text" @bind="@serverIP"/>
         </div>
 
         <div class="settings-pair">
             <span>Where to look for items to add to your library</span>
-            <input type="text" class="settings-pair" @bind="@importFolderPath"/>
+            <input type="text" @bind="@importFolderPath"/>
         </div>
 
         <div class="settings-pair">
             <span>Root path to library folder</span>
-            <input type="text" class="settings-pair" @bind="@libraryRootPath"/>
+            <input type="text" @bind="@libraryRootPath"/>
         </div>
 
         <div class="settings-pair">
             <span>Where to backup library and database</span>
-            <input type="text" class="settings-pair" @bind="@backupFolderPath"/>
+            <input type="text" @bind="@backupFolderPath"/>
         </div>
         
         <div class="settings-pair">
             <span>Where to store temporary items</span>
-            <input type="text" class="settings-pair" @bind="@tmpFolderPath"/>
+            <input type="text" @bind="@tmpFolderPath"/>
         </div>
         
         <div class="settings-pair">
-            <input type="checkbox" class="settings-pair" @bind="@showPrompts"/>
+            <input type="checkbox" @bind="@showPrompts"/>
             <span style="display: inline">Show Prompts?</span>
         </div>
         
         <div class="settings-pair">
-            <input type="checkbox" class="settings-pair" @bind="@displayNoDTInCV"/>
+            <input type="checkbox" @bind="@displayNoDTInCV"/>
             <span style="display: inline">Display items with no date taken in albums/folders?</span>
         </div>
         
