Remove redundant namespace qualifier

--- a/MemoryMosaic/Pages/Settings.razor
+++ b/MemoryMosaic/Pages/Settings.razor
@@ -91,7 +91,7 @@
     <div>
         <span class="header">Maintenance</span>
         <button class="textBtn" title="Create and Restore Backups of MM"><span class="material-icons-outlined">restore</span><a href="maintenance/backups">Backups</a></button>
-        <button class="textBtn" @onclick="@(() => System.Diagnostics.Process.Start("shutdown.exe", "-r -t 0"))"><span class="material-icons-outlined">restart_alt</span><span>Restart Server</span></button>
+        <button class="textBtn" @onclick="@(() => Process.Start("shutdown.exe", "-r -t 0"))"><span class="material-icons-outlined">restart_alt</span><span>Restart Server</span></button>
         <button class="textBtn" @onclick="@(() => { Directory.Delete(S.tmpFolderPath, true); Directory.CreateDirectory(S.tmpFolderPath); })"><span class="material-icons-outlined">folder_delete</span><span>Clear mm_tmp</span></button>
         <button title="Clear mm_tmp and Empty Trash" class="textBtn" @onclick="@FreeUpSpace"><span class="material-icons-outlined">folder_delete</span><span>Free Up Space</span></button>
         @if (!maintenanceLoaded)
