--- a/MemoryMosaic/Pages/Import.razor
+++ b/MemoryMosaic/Pages/Import.razor
@@ -88,18 +88,18 @@
 						} while (i < importFiles.Count && importFiles[i - 1].originalFilename == importFiles[i].originalFilename);
 						@{ i--; } @* Kind of stupid but fixes a problem where some items could be skipped. *@
 						
-						@if (libFilesWithSameName.ContainsKey(importFiles[i].originalFilename))
+						@if (libFilesWithSameName.TryGetValue(importFiles[i].originalFilename, out List<MediaRow> sameName))
 						{
-							foreach (MediaRow mediaRow in libFilesWithSameName[importFiles[i].originalFilename])
+							foreach (MediaRow mediaRow in sameName)
 							{
 								<LibraryItem MediaRow="@mediaRow" Rerender="@StateHasChanged"/>
 							}
 						}
 					</div>
 					<div class="warnDiv">
-						@if (libFilesWithSimilarName.ContainsKey(importFiles[i].originalFilename))
+						@if (libFilesWithSimilarName.TryGetValue(importFiles[i].originalFilename, out List<MediaRow> similarName))
 	                    {
-							foreach (MediaRow mediaRow in libFilesWithSimilarName[importFiles[i].originalFilename])
+							foreach (MediaRow mediaRow in similarName)
                     		{
                     			<LibraryItem MediaRow="@mediaRow" Rerender="@StateHasChanged"/>
                     		}
